crates/syntax/src/snapshots/syntax__grammar__tests__defvar.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"defvar i = 0;\")"
---
Parse {
    root_node: Root@0..13
      StatementList@0..13
        Defvar@0..13
          DefvarKw@0..6 "defvar"
          Whitespace@6..7 " "
          Identifier@7..9
            Id@7..8 "i"
            Whitespace@8..9 " "
          Equal@9..10 "="
          Whitespace@10..11 " "
          Value@11..12
            InnerValue@11..12
              Integer@11..12
                IntVal@11..12 "0"
          Semi@12..13 ";"
    ,
    errors: [],
}
