crates/syntax/src/snapshots/syntax__grammar__tests__dump.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"dump \\\"foo\\\";\")"
---
(
    SourceFile@0..11
      StatementList@0..11
        Dump@0..11
          Dump@0..4 "dump"
          Whitespace@4..5 " "
          Value@5..10
            InnerValue@5..10
              String@5..10
                StrVal@5..10 "\"foo\""
          Semi@10..11 ";"
    ,
    [],
)
