crates/syntax/src/snapshots/syntax__grammar__tests__include-2.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"include\")"
---
(
    SourceFile@0..7
      StatementList@0..7
        Include@0..7
          IncludeKw@0..7 "include"
          String@7..7
    ,
    [
        SyntaxError {
            range: 7..7,
            message: "expected filename after include",
        },
    ],
)
