crates/syntax/src/snapshots/syntax__grammar__tests__include.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(r#\"include \"foo.td\"\"#)"
---
(
    SourceFile@0..16
      StatementList@0..16
        Include@0..16
          IncludeKw@0..7 "include"
          Whitespace@7..8 " "
          String@8..16
            StrVal@8..16 "\"foo.td\""
    ,
    [],
)
