crates/syntax/src/snapshots/syntax__grammar__tests__simple_value-3.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"defvar A = !sort(x, [3, 1, 2], x); defvar B = !switch(A, 1: \\\"one\\\", 2: \\\"two\\\", \\\"other\\\");\")"
---
(
    SourceFile@0..86
      StatementList@0..86
        Defvar@0..35
          DefvarKw@0..6 "defvar"
          Whitespace@6..7 " "
          Identifier@7..9
            Id@7..8 "A"
            Whitespace@8..9 " "
          Equal@9..10 "="
          Whitespace@10..11 " "
          Value@11..33
            InnerValue@11..33
              BangOperator@11..33
                XSort@11..16 "!sort"
                LParen@16..17 "("
                Value@17..18
                  InnerValue@17..18
                    Identifier@17..18
                      Id@17..18 "x"
                Comma@18..19 ","
                Whitespace@19..20 " "
                Value@20..29
                  InnerValue@20..29
                    List@20..29
                      ValueList@20..29
                        LSquare@20..21 "["
                        Value@21..22
                          InnerValue@21..22
                            Integer@21..22
                              IntVal@21..22 "3"
                        Comma@22..23 ","
                        Whitespace@23..24 " "
                        Value@24..25
                          InnerValue@24..25
                            Integer@24..25
                              IntVal@24..25 "1"
                        Comma@25..26 ","
                        Whitespace@26..27 " "
                        Value@27..28
                          InnerValue@27..28
                            Integer@27..28
                              IntVal@27..28 "2"
                        RSquare@28..29 "]"
                Comma@29..30 ","
                Whitespace@30..31 " "
                Value@31..32
                  InnerValue@31..32
                    Identifier@31..32
                      Id@31..32 "x"
                RParen@32..33 ")"
          Semi@33..34 ";"
          Whitespace@34..35 " "
        Defvar@35..86
          DefvarKw@35..41 "defvar"
          Whitespace@41..42 " "
          Identifier@42..44
            Id@42..43 "B"
            Whitespace@43..44 " "
          Equal@44..45 "="
          Whitespace@45..46 " "
          Value@46..85
            InnerValue@46..85
              SwitchOperator@46..85
                XSwitch@46..53 "!switch"
                LParen@53..54 "("
                Value@54..55
                  InnerValue@54..55
                    Identifier@54..55
                      Id@54..55 "A"
                Comma@55..56 ","
                Whitespace@56..57 " "
                SwitchCase@57..65
                  Value@57..58
                    InnerValue@57..58
                      Integer@57..58
                        IntVal@57..58 "1"
                  Colon@58..59 ":"
                  Whitespace@59..60 " "
                  Value@60..65
                    InnerValue@60..65
                      String@60..65
                        StrVal@60..65 "\"one\""
                Comma@65..66 ","
                Whitespace@66..67 " "
                SwitchCase@67..75
                  Value@67..68
                    InnerValue@67..68
                      Integer@67..68
                        IntVal@67..68 "2"
                  Colon@68..69 ":"
                  Whitespace@69..70 " "
                  Value@70..75
                    InnerValue@70..75
                      String@70..75
                        StrVal@70..75 "\"two\""
                Comma@75..76 ","
                Whitespace@76..77 " "
                Value@77..84
                  InnerValue@77..84
                    String@77..84
                      StrVal@77..84 "\"other\""
                RParen@84..85 ")"
          Semi@85..86 ";"
    ,
    [],
)
