crates/syntax/src/snapshots/syntax__grammar__tests__statement.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"a\")"
---
Parse {
    root_node: Root@0..1
      StatementList@0..1
        Error@0..1
          Id@0..1 "a"
    ,
    errors: [
        SyntaxError {
            range: 0..1,
            message: "expected class, def, defm, defset, multiclass, let or foreach",
        },
    ],
}
